<resources>
    <string name="app_name">PromcoserApp</string>
    <string name="valetEmail" />
    <string name="valetPassword" />
    <string name="valetEmailLogin">Ingresa usuario</string>
    <string name="valetPwd">Ingresa Contraseña</string>
    <string name="valbtnLogin">LOGIN</string>
    <string name="valbtnRegister">REGISTER</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PROMCOSER</string>
    <string name="nav_header_subtitle">Menu desplegable</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valetFullName">Enter full name</string>
    <string name="valetCountry">Enter country</string>
    <string name="valetEmailReg">Enter email</string>
    <string name="valetPasswordReg">Enter password</string>
    <string name="valbtnsaveRegister">SAVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_maquinaria">Historial Partes Diarios</string>
    <string name="menu_parte">Parte Diario</string>
    <string name="menu_password">Cambio de Contraseña</string>
    <string name="splastext">BIENVENIDO A LA APP DE \nOPERACIONES DE PROMCOSER</string>
    <string name="crearDetalle">Crear</string>
    <string name="confirDetal">Confirmar Detalle</string>
    <string name="masdetal">Más Detalle</string>
    <string name="btnCDEditar">Editar</string>
    <string name="btnCDEliminar">Eliminar</string>
    <string name="horaINI">Hor.Ini</string>
    <string name="horaFIN">Hor.Fin</string>
    <string name="trab">Trabajo</string>
    <string name="descr">Descrip.</string>
    <string name="edit">Editar</string>
    <string name="elim">Eliminar</string>
    <string name="cerrrar">Cerrar</string>
    <string name="detalle_icon">iconTrabajo</string>
    <string name="strPlaca" />
    <string name="PlacaSTR">Placa</string>
    <string name="descpStr" />
    <string name="despSTR">Descripción</string>
    <string name="razonstr">Razón Social</string>
    <string name="serieSTR">Serie</string>
    <string name="FechaSTR">Fecha</string>
    <string name="StrHoromInicial">Horometro Inicial</string>
    <string name="HoroStrFin">Horometro Final</string>
    <string name="CantPetStr">Cantidad de Petroleo</string>
    <string name="cantAceiteStr">Cantidad de Aceite</string>
    <string name="strBtnF">Finalizar</string>
    <string name="strBtnDetalles">Más Detalles</string>
    <string name="plate_hint">Ingrese Placa</string>
    <string name="lblDestiny">Ingrese Descripcion</string>
    <string name="reason_hint">Ingrese RA</string>
    <string name="destiny_hint">Descripcion</string>
    <string name="IngreseSTR">Ingrese</string>
    <string name="Ingresestr">Ingrese</string>
    <string name="valtvHoraInicio">Horometro Inicio</string>
    <string name="hideHoraInicio">Ingrese Hor. Inicio</string>
    <string name="valetHorometro">Hrs</string>
    <string name="enterActualPassword">Ingresar contraseña actual</string>
    <string name="enterNewPassword">Ingresar nueva contraseña</string>
    <string name="repeatNewPassword">Repite la nueva contraseña</string>
    <string name="btnCambiarContrasena">Cambiar Contraseña</string>
    <string name="retroceder">Retroceder</string>
    <string name="guardar">Guardar</string>
    <string name="descripciontrabaajo">Descripción</string>
    <string name="regresarDetalleParte">Cerrar</string>
    <string name="btnagregarDetalle">Agregar</string>

</resources>