<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parte_diario"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/menu_parte" />
        <item
            android:id="@+id/nav_maquinaria"
            android:icon="@drawable/baseline_construction_24"
            android:title="@string/menu_maquinaria" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/cambioContrasenaFragment"
            android:icon="@drawable/keychange"
            android:title="@string/menu_password" />
    </group>
</menu>