<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".adapter.TarjetaParteDiarioAdapter">

    <!-- CardView para fondo redondeado gris -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContainer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/material_dynamic_neutral90"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Contenido dentro del CardView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/lblPlate2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PlacaSTR"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtPlate2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPlate2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblPlate2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblDestiny2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/despSTR"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtDestiny2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPlate2" />

            <TextView
                android:id="@+id/txtDestiny2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblDestiny2"
                app:layout_constraintTop_toBottomOf="@id/txtPlate2" />

            <TextView
                android:id="@+id/lblReason2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/razonstr"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtReason2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDestiny2" />

            <TextView
                android:id="@+id/txtReason2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblReason2"
                app:layout_constraintTop_toBottomOf="@id/txtDestiny2" />

            <TextView
                android:id="@+id/lblDate2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/FechaSTR"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtDate2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtReason2" />

            <TextView
                android:id="@+id/txtDate2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblDate2"
                app:layout_constraintTop_toBottomOf="@+id/txtReason2" />

            <TextView
                android:id="@+id/lblStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/StrHoromInicial"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtStartTime2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDate2" />

            <TextView
                android:id="@+id/txtStartTime2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblStartTime"
                app:layout_constraintTop_toBottomOf="@id/txtDate2" />

            <TextView
                android:id="@+id/lblEndTime2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/HoroStrFin"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtEndTime2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtStartTime2" />

            <TextView
                android:id="@+id/txtEndTime2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblEndTime2"
                app:layout_constraintTop_toBottomOf="@id/txtStartTime2" />

            <TextView
                android:id="@+id/lblPetCount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/CantPetStr"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtPetCount2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtEndTime2" />

            <TextView
                android:id="@+id/txtPetCount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblPetCount2"
                app:layout_constraintTop_toBottomOf="@id/txtEndTime2" />

            <TextView
                android:id="@+id/lblOilAmount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cantAceiteStr"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtOilAmount2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPetCount2" />

            <TextView
                android:id="@+id/txtOilAmount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lblOilAmount2"
                app:layout_constraintTop_toBottomOf="@id/txtPetCount2" />

            <Button
                android:id="@+id/btnDetalles2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/white"
                android:text="@string/strBtnDetalles"
                android:textColor="@color/design_default_color_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOilAmount2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
